data/repos_history/AleCigolini/notifications-api/2025-09-27T18:06:27Z/kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackaton-notificationsapi
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: hackaton-notificationsapi
  template:
    metadata:
      labels:
        app: hackaton-notificationsapi
    spec:
      containers:
        - name: hackaton-notificationsapi
          image: alecigolini/hackaton-notificationsapi:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "400m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: hackaton-notificationsapi-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: hackaton-notificationsapi
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hackaton-notificationsapi-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: hackaton-notificationsapi-service
                port:
                  number: 80
